clusters/homelab/infrastructure/monitoring/install/loki-release.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: loki
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/audit: privileged
