clusters/homelab/infrastructure/monitoring/install/loki-stack-release.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: loki
